# sklearn-compat

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-pypi.yml  testing.yml
sklearn_compat/: __init__.py  base.py
sklearn_compat/tests/: test_common.py
sklearn_compat/utils/: _chunking.py  _indexing.py  _metadata_requests.py  _missing.py  _optional_dependencies.py  _param_validation.py  _tags.py  _user_interface.py  _version.py  extmath.py  metadata_routing.py  validation.py
sklearn_compat/utils/tests/: test_chunking.py  test_indexing.py  test_mask.py  test_metadata_requests.py  test_metadata_routing.py  test_missing.py  test_optional_dependencies.py  test_param_validation.py  test_user_interface.py  test_validation.py
src/sklearn_compat/: _sklearn_compat.py  _vendor_sklearn_compat.py  base.py
src/sklearn_compat/tests/: test_common.py
src/sklearn_compat/utils/: _chunking.py  _indexing.py  _mask.py  _missing.py  _optional_dependencies.py  _tags.py  _user_interface.py  extmath.py  fixes.py  metadata_routing.py  validation.py
src/sklearn_compat/utils/_test_common/: instance_generator.py
src/sklearn_compat/utils/tests/: test_fixes.py
tests/: conftest.py  test_base.py  test_common.py  test_sklearn_compat.py  test_vendor_sklearn_compat.py  test_version.py
tests/metrics/: test_classification.py
tests/utils/: test_dataframe.py  test_estimator_checks.py  test_extmath.py  test_fixes.py  test_indexing.py  test_mask.py  test_metadata_routing.py  test_missing.py  test_multiclass.py  test_param_validation.py  test_tags.py  test_testing.py  test_user_interface.py  test_validation.py
tests/utils/_test_common/: test_instance_generator.py
