[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn_compat"
dynamic = ["version", "readme"]
description = "Easy support for future features in older scikit-learn versions"
authors = [
    { name = "Guillaume Lemaitre", email = "guillaume@probabl.ai" }
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.2.2,<1.6",
]

[project.optional-dependencies]
lint = [
    "pre-commit",
]
tests = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/glemaitre/sklearn_compat"
Source = "https://github.com/glemaitre/sklearn_compat"
Issues = "https://github.com/glemaitre/sklearn_compat/issues"

[tool.setuptools]
packages = ["sklearn_compat"]

[tool.setuptools.dynamic]
version = { file = "sklearn_compat/VERSION.txt" }
readme = { file = "README.md" }

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
scikit-learn = ">=1.2.2,<1.6"

[tool.pixi.pypi-dependencies]
sklearn_compat = { path = ".", editable = true }

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"

[tool.pixi.feature.sklearn12.dependencies]
scikit-learn = "~=1.2.0"

[tool.pixi.feature.sklearn13.dependencies]
scikit-learn = "~=1.3.0"

[tool.pixi.feature.sklearn14.dependencies]
scikit-learn = "~=1.4.0"

[tool.pixi.feature.sklearn15.dependencies]
scikit-learn = "~=1.5.0"

[tool.pixi.feature.lint.tasks]
lint = { cmd = "pre-commit install && pre-commit run -v --all-files --show-diff-on-failure" }

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -vsl --cov=sklearn_compat --cov-report=xml sklearn_compat" }

[tool.pixi.environments]
lint = ["lint"]
tests = ["tests"]
dev = ["tests", "lint"]
ci-sklearn12 = ["tests", "lint", "sklearn12"]
ci-sklearn13 = ["tests", "lint", "sklearn13"]
ci-sklearn14 = ["tests", "lint", "sklearn14"]
ci-sklearn15 = ["tests", "lint", "sklearn15"]

[tool.black]
line-length = 88
target_version = ['py310', 'py311']
preview = true
# Exclude irrelevant directories for formatting
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | \.pytest_cache
  | \.idea
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
