[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklearn-compat"
dynamic = ["version"]
readme = "README.md"
description = "Ease support for compatible scikit-learn estimators across versions"
authors = [
    { name = "Guillaume Lemaitre", email = "guillaume@probabl.ai" },
    { name = "Adrin Jalali", email = "adrin.jalali@gmail.com" },
]
requires-python = ">=3.8"  # imposed by scikit-learn > 1.2
dependencies = [
    "scikit-learn>=1.2,<1.7",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
lint = [
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
tests = [
    "pandas",
    "pytz",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "ipython",
]

[project.urls]
Homepage = "https://sklearn-compat.readthedocs.io/en/"
Source = "https://github.com/sklearn-compat/sklearn-compat"
Issues = "https://github.com/sklearn-compat/sklearn-compat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sklearn_compat"]

[tool.hatch.version]
path = "src/sklearn_compat/__init__.py"

[tool.pixi.project]
channels = ["conda-forge/label/scikit-learn_rc", "conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
scikit-learn = ">=1.2,<1.7"

[tool.pixi.pypi-dependencies]
sklearn_compat = { path = ".", editable = true }

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"

[tool.pixi.feature.tests.dependencies]
pandas = "*"
pytz = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"

[tool.pixi.feature.dev.dependencies]
ipython = "*"

[tool.pixi.feature.sklearn12.dependencies]
scikit-learn = { version = "~=1.2.0", channel = "conda-forge" }

[tool.pixi.feature.sklearn13.dependencies]
scikit-learn = { version = "~=1.3.0", channel = "conda-forge" }

[tool.pixi.feature.sklearn14.dependencies]
scikit-learn = { version = "~=1.4.0", channel = "conda-forge" }

[tool.pixi.feature.sklearn15.dependencies]
scikit-learn = { version = "~=1.5.0", channel = "conda-forge" }

[tool.pixi.feature.sklearn16.dependencies]
scikit-learn = { version = "~=1.6.0", channel = "conda-forge" }

[tool.pixi.feature.lint.tasks]
lint = { cmd = "pre-commit install && pre-commit run -v --all-files --show-diff-on-failure" }

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -vsl --cov=sklearn_compat --cov-report=xml --cov-report=term-missing tests" }

[tool.pixi.environments]
lint = ["lint"]
docs = ["docs"]
tests = ["tests"]
dev = ["docs","tests", "lint", "dev"]
ci-sklearn12 = ["tests", "lint", "sklearn12"]
ci-sklearn13 = ["tests", "lint", "sklearn13"]
ci-sklearn14 = ["tests", "lint", "sklearn14"]
ci-sklearn15 = ["tests", "lint", "sklearn15"]
ci-sklearn16 = ["tests", "lint", "sklearn16"]

[tool.black]
line-length = 88
target_version = ['py310', 'py311']
preview = true
# Exclude irrelevant directories for formatting
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | \.pytest_cache
  | \.idea
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
lint.select = ["I"]
